// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yup GetSchema 1`] = `
Object {
  "data": Object {
    "id": 1,
    "name": "ddd",
    "posts": Array [
      Object {
        "content": "dd",
        "createdAt": 2023-07-14T02:01:17.763Z,
        "id": 1,
        "isTop": true,
        "tags": Array [],
      },
    ],
    "role": "vip",
  },
}
`;

exports[`yup GetSchema 2`] = `
Object {
  "data": Object {
    "id": 1,
    "name": "ddd",
    "posts": Array [],
    "role": "vip",
  },
}
`;

exports[`yup GetSchema 3`] = `
Object {
  "data": Object {
    "id": false,
    "name": "ddd",
    "posts": Array [],
    "role": "vip",
  },
  "error": [ValidationError: 此项必须是一个数字],
}
`;

exports[`yup allowEmptyString 正常 1`] = `
Object {
  "data": "",
  "error": [ValidationError: 此项必须是一个数字],
}
`;

exports[`yup allowEmptyString 正常 2`] = `
Object {
  "data": "",
}
`;

exports[`yup number 支持 id() 1`] = `
Object {
  "data": 1,
}
`;

exports[`yup number 支持 id() 2`] = `
Object {
  "data": -1,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 id() 3`] = `
Object {
  "data": 0,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 id() 4`] = `
Object {
  "data": 0.5,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 id() 5`] = `
Object {
  "data": 1.5,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 id() 6`] = `
Object {
  "data": 100,
}
`;

exports[`yup number 支持 negativeInteger() 1`] = `
Object {
  "data": 1,
  "error": [ValidationError: 此项必须是一个负整数],
}
`;

exports[`yup number 支持 negativeInteger() 2`] = `
Object {
  "data": -1,
}
`;

exports[`yup number 支持 negativeInteger() 3`] = `
Object {
  "data": -0,
  "error": [ValidationError: 此项必须是一个负整数],
}
`;

exports[`yup number 支持 negativeInteger() 4`] = `
Object {
  "data": 0.5,
  "error": [ValidationError: 此项必须是一个负整数],
}
`;

exports[`yup number 支持 negativeInteger() 5`] = `
Object {
  "data": 1.5,
  "error": [ValidationError: 此项必须是一个负整数],
}
`;

exports[`yup number 支持 negativeInteger() 6`] = `
Object {
  "data": 100,
  "error": [ValidationError: 此项必须是一个负整数],
}
`;

exports[`yup number 支持 negativeInteger() 7`] = `
Object {
  "data": -100.3,
  "error": [ValidationError: 此项必须是一个负整数],
}
`;

exports[`yup number 支持 nonNegative() 1`] = `
Object {
  "data": 1,
}
`;

exports[`yup number 支持 nonNegative() 2`] = `
Object {
  "data": -1,
  "error": [ValidationError: 此项必须是一个非负数],
}
`;

exports[`yup number 支持 nonNegative() 3`] = `
Object {
  "data": -0,
}
`;

exports[`yup number 支持 nonNegative() 4`] = `
Object {
  "data": 0.5,
}
`;

exports[`yup number 支持 nonNegative() 5`] = `
Object {
  "data": 1.5,
}
`;

exports[`yup number 支持 nonNegative() 6`] = `
Object {
  "data": 100,
}
`;

exports[`yup number 支持 nonNegative() 7`] = `
Object {
  "data": -100.3,
  "error": [ValidationError: 此项必须是一个非负数],
}
`;

exports[`yup number 支持 nonNegativeInteger() 1`] = `
Object {
  "data": 1,
}
`;

exports[`yup number 支持 nonNegativeInteger() 2`] = `
Object {
  "data": -1,
  "error": [ValidationError: 此项必须是一个非负整数],
}
`;

exports[`yup number 支持 nonNegativeInteger() 3`] = `
Object {
  "data": -0,
}
`;

exports[`yup number 支持 nonNegativeInteger() 4`] = `
Object {
  "data": 0.5,
  "error": [ValidationError: 此项必须是一个非负整数],
}
`;

exports[`yup number 支持 nonNegativeInteger() 5`] = `
Object {
  "data": 1.5,
  "error": [ValidationError: 此项必须是一个非负整数],
}
`;

exports[`yup number 支持 nonNegativeInteger() 6`] = `
Object {
  "data": 100,
}
`;

exports[`yup number 支持 nonNegativeInteger() 7`] = `
Object {
  "data": -100.3,
  "error": [ValidationError: 此项必须是一个非负整数],
}
`;

exports[`yup number 支持 nonPositive() 1`] = `
Object {
  "data": 1,
  "error": [ValidationError: 此项必须是一个非正数],
}
`;

exports[`yup number 支持 nonPositive() 2`] = `
Object {
  "data": -1,
}
`;

exports[`yup number 支持 nonPositive() 3`] = `
Object {
  "data": -0,
}
`;

exports[`yup number 支持 nonPositive() 4`] = `
Object {
  "data": 0.5,
  "error": [ValidationError: 此项必须是一个非正数],
}
`;

exports[`yup number 支持 nonPositive() 5`] = `
Object {
  "data": 1.5,
  "error": [ValidationError: 此项必须是一个非正数],
}
`;

exports[`yup number 支持 nonPositive() 6`] = `
Object {
  "data": 100,
  "error": [ValidationError: 此项必须是一个非正数],
}
`;

exports[`yup number 支持 nonPositive() 7`] = `
Object {
  "data": -100.3,
}
`;

exports[`yup number 支持 nonPositiveInteger() 1`] = `
Object {
  "data": 1,
  "error": [ValidationError: 此项必须是一个非正整数],
}
`;

exports[`yup number 支持 nonPositiveInteger() 2`] = `
Object {
  "data": -1,
}
`;

exports[`yup number 支持 nonPositiveInteger() 3`] = `
Object {
  "data": -0,
}
`;

exports[`yup number 支持 nonPositiveInteger() 4`] = `
Object {
  "data": 0.5,
  "error": [ValidationError: 此项必须是一个非正整数],
}
`;

exports[`yup number 支持 nonPositiveInteger() 5`] = `
Object {
  "data": 1.5,
  "error": [ValidationError: 此项必须是一个非正整数],
}
`;

exports[`yup number 支持 nonPositiveInteger() 6`] = `
Object {
  "data": 100,
  "error": [ValidationError: 此项必须是一个非正整数],
}
`;

exports[`yup number 支持 nonPositiveInteger() 7`] = `
Object {
  "data": -100.3,
  "error": [ValidationError: 此项必须是一个非正整数],
}
`;

exports[`yup number 支持 positiveInteger() 1`] = `
Object {
  "data": 1,
}
`;

exports[`yup number 支持 positiveInteger() 2`] = `
Object {
  "data": -1,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 positiveInteger() 3`] = `
Object {
  "data": 0,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 positiveInteger() 4`] = `
Object {
  "data": 0.5,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 positiveInteger() 5`] = `
Object {
  "data": 1.5,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 positiveInteger() 6`] = `
Object {
  "data": 100,
}
`;

exports[`yup oneOf-enum 1`] = `
Object {
  "data": Object {
    "id": 1,
    "status": "pending",
  },
}
`;

exports[`yup oneOf-enum 2`] = `
Object {
  "data": Object {
    "id": 1,
    "status": "pending2",
  },
  "error": [ValidationError: 此项必须是下列值之一: pending, success, failed],
}
`;

exports[`yup oneOf-obj 1`] = `
Object {
  "data": Object {
    "id": 1,
    "status": "pending",
  },
}
`;

exports[`yup oneOf-obj 2`] = `
Object {
  "data": Object {
    "id": 1,
    "status": "pending2",
  },
  "error": [ValidationError: 此项必须是下列值之一: pending, success, failed],
}
`;

exports[`yup ref root 1`] = `
Object {
  "data": Object {
    "pass1": "123",
    "pass2": "456",
    "v": Object {
      "p1": "1234",
      "p2": "4566",
    },
  },
  "error": [ValidationError: 此项必须是下列值之一: Ref(@pass1)],
}
`;

exports[`yup ref root 2`] = `
Object {
  "data": Object {
    "pass1": "123",
    "pass2": "456",
    "v": Object {
      "p1": "123",
      "p2": "4566",
    },
  },
}
`;

exports[`yup ref 支持 map 1`] = `
Object {
  "data": 2,
  "error": [ValidationError: 此项必须大于或等于3],
}
`;

exports[`yup ref 支持 map 2`] = `
Object {
  "data": 2,
  "error": [ValidationError: 此项必须大于或等于3],
}
`;

exports[`yup test 第一个参数可传函数或正则 1`] = `
Object {
  "data": Object {
    "name": "de",
    "pass": "dss",
  },
  "error": [ValidationError: 姓名应该包含f],
}
`;

exports[`yup test 第一个参数可传函数或正则 2`] = `
Object {
  "data": Object {
    "name": "defl",
    "pass": "dss",
  },
  "error": [ValidationError: 密码长度应大于10],
}
`;

exports[`yup test 第一个参数可传函数或正则 3`] = `
Object {
  "data": Object {
    "name": "defl",
    "pass": "dssdllsal;;",
  },
}
`;

exports[`yup validateInOrder 正常: 姓名必填 1`] = `[ValidationError: 姓名必填]`;

exports[`yup validateInOrder 正常: 密码有误 1`] = `[ValidationError: 密码必须大于或等于100]`;

exports[`yup validateInOrderSync 正常: 姓名必填 1`] = `[ValidationError: 姓名必填]`;

exports[`yup validateInOrderSync 正常: 密码有误 1`] = `[ValidationError: 密码必须大于或等于100]`;

exports[`yup validatePlus 正常 1`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 姓名必填],
}
`;

exports[`yup validatePlus 正常 2`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 密码必须大于或等于100],
}
`;

exports[`yup validatePlus 正常 3`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
  },
}
`;

exports[`yup validatePlus 正常 4`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
    "xxx": "sss",
  },
}
`;

exports[`yup validatePlusSync 正常 1`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 姓名必填],
}
`;

exports[`yup validatePlusSync 正常 2`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 密码必须大于或等于100],
}
`;

exports[`yup validatePlusSync 正常 3`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
  },
}
`;

exports[`yup validatePlusSync 正常 4`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
    "xxx": "sss",
  },
}
`;
